--- a/src/pages/login/index.less
+++ b/src/pages/login/index.less
@@ -1,247 +1,301 @@
 @import '@/style/index';
+
 .login-wrapper {
-    width: 100%;
-    height: 100%;
-    background-image: url(https://tdesign.gtimg.com/pro-template/login-bg-img.jpg);
-    background-size: cover;
-    background-position: 50%;
-    position: relative;
+	width: 100%;
+	height: 100%;
+	background-image: url(https://tdesign.gtimg.com/pro-template/login-bg-img.jpg);
+	background-size: cover;
+	background-position: 50%;
+	position: relative;
 }
+
 .login-container {
-    position: absolute;
-    top: 28%;
-    left: 12%;
-    min-height: 500px;
-    line-height: 22px;
+	position: absolute;
+	top: 28%;
+	left: 12%;
+	min-height: 500px;
+	line-height: 22px;
 }
+
 .title-container {
-    .icon {
-        width: 290px;
-        height: 60px;
-    }
-    .side-title {
-        margin-top: 24.9px;
-        .tip1, .tip2 {
-            display: inline-block;
-            margin-right: 8px;
-        }
-        .tip1 {
-            font-size: 14px;
-            color: rgba(0,0,0,0.60);
-        }
-        .tip2 {
-            font-size: 14px;
-            color: @brand-color-8;
-            cursor: pointer;
-        }
-    }
+
+	.icon {
+		width: 290px;
+		height: 60px;
+	}
+
+	.side-title {
+		margin-top: 24.9px;
+
+		.tip1,
+		.tip2 {
+			display: inline-block;
+			margin-right: 8px;
+		}
+
+		.tip1 {
+			font-size: 14px;
+			color: rgba(0,0,0,.60);
+		}
+
+		.tip2 {
+			font-size: 14px;
+			color: @brand-color-8;
+			cursor: pointer;
+		}
+	}
 }
 
 .login-step1 {
-    .input-container {
-        margin-top: 72px;
 
-        .t-input {
-            display: block;
-        }
-        .t-popup-reference {
-            margin: 24px 0;
-        }
-    }
-    .check-container {
-        .t-checkbox__label {
-            color: @text-color-secondary;
-            span {
-                color: @brand-color-8;
-            }
-        }
-    }
+	.input-container {
+		margin-top: 72px;
+
+		.t-input {
+			display: block;
+		}
+
+		.t-popup-reference {
+			margin: 24px 0;
+		}
+	}
+
+	.check-container {
+
+		.t-checkbox__label {
+			color: @text-color-secondary;
+
+			span {
+				color: @brand-color-8;
+			}
+		}
+	}
 }
+
 .login-step3 {
-    .input-container {
-        margin-top: 34px;
-    }
+
+	.input-container {
+		margin-top: 34px;
+	}
 }
+
 .input-container {
-    .tip-container {
-        margin-bottom: 16px;
-        .tip1 {
-            font-size: 14px;
-            color: rgba(0,0,0,0.60);
-        }
-        .tip2 {
-            float: right;
-            font-size: 14px;
-            color: @brand-color-8;
 
-            .t-icon {
-                height: 20px;
-                vertical-align: text-bottom;
-            }
-        }
-    }
-    .button-container {
-        margin-top: 16px;
-    }
-    .check-container {
-        font-size: 14px;
-        color: rgba(0,0,0,0.60);
+	.tip-container {
+		margin-bottom: 16px;
 
-        .tip {
-            float: right;
-            font-size: 14px;
-            color: @brand-color-8;
-        }
-    }
+		.tip1 {
+			font-size: 14px;
+			color: rgba(0,0,0,.60);
+		}
+
+		.tip2 {
+			float: right;
+			font-size: 14px;
+			color: @brand-color-8;
+
+			.t-icon {
+				height: 20px;
+				vertical-align: text-bottom;
+			}
+		}
+	}
+
+	.button-container {
+		margin-top: 16px;
+	}
+
+	.check-container {
+		font-size: 14px;
+		color: rgba(0,0,0,.60);
+
+		.tip {
+			float: right;
+			font-size: 14px;
+			color: @brand-color-8;
+		}
+	}
 }
 
 .login-step1 {
-    .bottom-container {
-        margin-top: 72px;
-    }
+
+	.bottom-container {
+		margin-top: 72px;
+	}
 }
+
 .login-step3 {
-    .bottom-container {
-        margin-top: 32px;
-    }
-    .input-container .tip-container {
-        width: 192px;
-    }
+
+	.bottom-container {
+		margin-top: 32px;
+	}
+
+	.input-container .tip-container {
+		width: 192px;
+	}
 }
+
 .login-step2 {
-    .input-container {
-        margin-top: 108.9px;
-        .tip1 {
-            cursor: pointer;
-        }
-    }
+
+	.input-container {
+		margin-top: 108.9px;
+
+		.tip1 {
+			cursor: pointer;
+		}
+	}
 }
+
 .bottom-container {
-    margin-top: 66px;
-    .tip {
-        font-size: 14px;
-        color: @brand-color-8; 
-        cursor: pointer;
-    }
-    i {
-        font-style: normal;
-        color: @gray-color-3;
-        margin: 0 14px;
-    }
+	margin-top: 66px;
+
+	.tip {
+		font-size: 14px;
+		color: @brand-color-8; 
+		cursor: pointer;
+	}
+
+	i {
+		font-style: normal;
+		color: @gray-color-3;
+		margin: 0 14px;
+	}
 
 }
+
 .rex-check {
-    font-family: PingFangSC-Regular;
-    font-size: 14px;
-    color: @text-color-placeholder;
-    line-height: 22px;
+	font-family: PingFangSC-Regular;
+	font-size: 14px;
+	color: @text-color-placeholder;
+	line-height: 22px;
 }
+
 .format-correct {
-    color: @text-color-primary;
+	color: @text-color-primary;
     
-    .t-icon {
-        color: @success-color-5;
-    }
+	.t-icon {
+		color: @success-color-5;
+	}
 }
 
 .login-step4 {
-    .input-container {
-        margin-top: 64px;
 
-        .t-input {
-            display: block;
-        }
-        .t-popup-reference {
-            margin: 24px 0;
-        }
-        .verification-code {
-            margin-bottom: 24px;
+	.input-container {
+		margin-top: 64px;
 
-            .t-input {
-                display: inline-block;
-            }
-            button {
-                width: 102px;
-                height: 40px;
-                margin-left: 11px;
-            }
-        }
-    }
-    .bottom-container {
-        margin-top: 66px;
-    }
-    .check-container {
-        .t-checkbox__label {
-            color: @text-color-secondary;
+		.t-input {
+			display: block;
+		}
 
-            span {
-                color: @brand-color-8;
-            }
-        }
-    }
+		.t-popup-reference {
+			margin: 24px 0;
+		}
+
+		.verification-code {
+			margin-bottom: 24px;
+
+			.t-input {
+				display: inline-block;
+			}
+
+			button {
+				width: 102px;
+				height: 40px;
+				margin-left: 11px;
+			}
+		}
+	}
+
+	.bottom-container {
+		margin-top: 66px;
+	}
+
+	.check-container {
+
+		.t-checkbox__label {
+			color: @text-color-secondary;
+
+			span {
+				color: @brand-color-8;
+			}
+		}
+	}
 }
 
 .login-step5 {
-    .input-container {
-        margin-top: 64px;
 
-        .t-input {
-            display: block;
-        }
-        .t-popup-reference {
-            margin: 24px 0;
-        }
-        .t-select-popup-reference {
-            margin: 0;
-        }
-    }
-    .bottom-container {
-        margin-top: 66px;
-    }
-    .check-container {
-        .t-checkbox__label {
-            color: @text-color-secondary;
+	.input-container {
+		margin-top: 64px;
 
-            span {
-                color: @brand-color-8;
-            }
-        }
-    }
+		.t-input {
+			display: block;
+		}
+
+		.t-popup-reference {
+			margin: 24px 0;
+		}
+
+		.t-select-popup-reference {
+			margin: 0;
+		}
+	}
+
+	.bottom-container {
+		margin-top: 66px;
+	}
+
+	.check-container {
+
+		.t-checkbox__label {
+			color: @text-color-secondary;
+
+			span {
+				color: @brand-color-8;
+			}
+		}
+	}
 }
 
 .login-step6 {
-    .input-container {
-        margin-top: 64px;
 
-        .t-input {
-            display: block;
-        }
-        .t-popup-reference {
-            margin: 24px 0;
-        }
-        .verification-code {
-            margin: 24px 0;
+	.input-container {
+		margin-top: 64px;
 
-            .t-input {
-                display: inline-block;
-            }
-            button {
-                width: 102px;
-                height: 40px;
-                margin-left: 11px;
-            }
-        }
-    }
-    .bottom-container {
-        margin-top: 66px;
-    }
-    .check-container {
-        .t-checkbox__label {
-            color: @text-color-secondary;
+		.t-input {
+			display: block;
+		}
 
-            span {
-                color: @brand-color-8;
-            }
-        }
-    }
+		.t-popup-reference {
+			margin: 24px 0;
+		}
+
+		.verification-code {
+			margin: 24px 0;
+
+			.t-input {
+				display: inline-block;
+			}
+
+			button {
+				width: 102px;
+				height: 40px;
+				margin-left: 11px;
+			}
+		}
+	}
+
+	.bottom-container {
+		margin-top: 66px;
+	}
+
+	.check-container {
+
+		.t-checkbox__label {
+			color: @text-color-secondary;
+
+			span {
+				color: @brand-color-8;
+			}
+		}
+	}
 }
